- Whenever a server responds with a 401/407 status code, defer mimeType notification   until the actual content is obtained.

BUG:205088

svn path=/trunk/KDE/kdelibs/; revision=1061509